syntax = "proto3";

option go_package = "github.com/minthao56/setup-microservices/pkg/usermgmt";

service UserService {
    rpc AddUser (UserAddRequest) returns (UserResponse) {}
    rpc GetUser (GetUserRequest) returns (UserResponses){}
    rpc GetOneUser(GetOneUserResquest) returns(UserResponse){}
    rpc EditUser(GetOneUserResquest) returns(UserResponse){}


  }

message UserAddRequest {
  string username = 1;
  string password = 2;
}
message UserResponse {
  int32 user_id = 1;
  string username = 2;
}

message UserResponses{
 repeated UserResponse data = 1;
 GetUserRequest pagination = 2;
}

message GetUserRequest{
  string keyword = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetOneUserResquest {
  string User_id = 1;
}

message EditUserResquest {
  int32 User_id = 1;
  string username = 2;
}